# libscipaper

./: CMakeLists.txt  README.md  sci-backend.c  sci-conf.c  sci-log.c  sci-modules.c  scipaper.c  sciplugin.c  sciplugin.h  types.c  types.h
config/: CMakeLists.txt  scipaper.ini
doc/: build.md  libscipaper.doxygen.in  mainpage.txt  style.css
modapi/: sci-backend.h  sci-conf.h  sci-log.h  sci-modules.h
scipaper/: scipaper.h
src/: CMakeLists.txt  log.cpp  main.c  main.cpp  nxjson.c  options.h  sci-backend.c  sci-conf.c  sci-log.c  sci-modules.c  scipaper.c  types.c  utils.c
src/modapi/: nxjson.h  sci-backend.h  sci-conf.h  sci-log.h  sci-modules.h  utils.h
src/modules/: CMakeLists.txt  core.c  crossref.c  scihub.c  test.c
src/scipaper/: scipaper.h  types.h
